--- a/Parent/ClassLibrary1/ClassLibrary1/Parent.csproj
+++ b/Parent/ClassLibrary1/ClassLibrary1/Parent.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\DVT-POC-Common\Common\ClassLibrary1\ClassLibrary1\ClassLibrary1.csproj" />
+  </ItemGroup>
+
 </Project>
